--- a/p8451_assignment_1.html
+++ b/p8451_assignment_1.html
@@ -714,8 +714,8 @@ fit_logistic %&gt;%
   mutate(OR = exp(estimate),
          CI_lower = exp(estimate - 1.96*std.error),
          CI_upper = exp(estimate + 1.95*std.error)) %&gt;%
-  select(term, estimate, OR, CI_lower, CI_upper) %&gt;%
-  knitr::kable()</code></pre>
+  select(term, estimate, OR, CI_lower, CI_upper, p.value) %&gt;%
+  knitr::kable(digits = 3)</code></pre>
 <table>
 <thead>
 <tr class="header">
@@ -724,58 +724,127 @@ fit_logistic %&gt;%
 <th align="right">OR</th>
 <th align="right">CI_lower</th>
 <th align="right">CI_upper</th>
+<th align="right">p.value</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td align="left">(Intercept)</td>
-<td align="right">-3.6260648</td>
-<td align="right">0.0266207</td>
-<td align="right">0.0002633</td>
-<td align="right">2.628806</td>
+<td align="right">-3.626</td>
+<td align="right">0.027</td>
+<td align="right">0.000</td>
+<td align="right">2.629</td>
+<td align="right">0.124</td>
 </tr>
 <tr class="even">
 <td align="left">glucose</td>
-<td align="right">0.0816987</td>
-<td align="right">1.0851288</td>
-<td align="right">1.0362295</td>
-<td align="right">1.136068</td>
+<td align="right">0.082</td>
+<td align="right">1.085</td>
+<td align="right">1.036</td>
+<td align="right">1.136</td>
+<td align="right">0.001</td>
 </tr>
 <tr class="odd">
 <td align="left">homa</td>
-<td align="right">0.2738822</td>
-<td align="right">1.3150599</td>
-<td align="right">0.9387645</td>
-<td align="right">1.839025</td>
+<td align="right">0.274</td>
+<td align="right">1.315</td>
+<td align="right">0.939</td>
+<td align="right">1.839</td>
+<td align="right">0.111</td>
 </tr>
 <tr class="even">
 <td align="left">leptin</td>
-<td align="right">-0.0085738</td>
-<td align="right">0.9914628</td>
-<td align="right">0.9612612</td>
-<td align="right">1.022452</td>
+<td align="right">-0.009</td>
+<td align="right">0.991</td>
+<td align="right">0.961</td>
+<td align="right">1.022</td>
+<td align="right">0.587</td>
 </tr>
 <tr class="odd">
 <td align="left">bmi</td>
-<td align="right">-0.1042605</td>
-<td align="right">0.9009905</td>
-<td align="right">0.8063160</td>
-<td align="right">1.006211</td>
+<td align="right">-0.104</td>
+<td align="right">0.901</td>
+<td align="right">0.806</td>
+<td align="right">1.006</td>
+<td align="right">0.066</td>
 </tr>
 <tr class="even">
 <td align="left">age</td>
-<td align="right">-0.0228810</td>
-<td align="right">0.9773788</td>
-<td align="right">0.9502219</td>
-<td align="right">1.005167</td>
+<td align="right">-0.023</td>
+<td align="right">0.977</td>
+<td align="right">0.950</td>
+<td align="right">1.005</td>
+<td align="right">0.111</td>
 </tr>
 </tbody>
 </table>
 <p>The beta estimate associated with a 1-unit change in HOMA-IR is
-0.274. The OR is 1.315. The 95% CI is (0.939, 1.84).</p>
+0.274. The OR is 1.315. The 95% CI is (0.939, 1.849).</p>
 </div>
 <div id="question-5" class="section level2">
 <h2>Question 5</h2>
+<p>Constuct a linear regression model using insulin as the outcome and
+BMI (continuous), age, and glucose as the independent variables. Fill in
+the beta estimate and 95% confidence interval associated with a 1-unit
+change in age.</p>
+<pre class="r"><code>fit_linear = 
+  lm(insulin ~ bmi + age + glucose, data = bcdata)
+
+fit_linear %&gt;%
+  broom::tidy() %&gt;%
+  mutate(OR = exp(estimate),
+         CI_lower = exp(estimate - 1.96*std.error),
+         CI_upper = exp(estimate + 1.96*std.error)) %&gt;%
+  select(term, estimate, OR, CI_lower, CI_upper, p.value) %&gt;%
+  knitr::kable(digits = 3)</code></pre>
+<table>
+<thead>
+<tr class="header">
+<th align="left">term</th>
+<th align="right">estimate</th>
+<th align="right">OR</th>
+<th align="right">CI_lower</th>
+<th align="right">CI_upper</th>
+<th align="right">p.value</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">(Intercept)</td>
+<td align="right">-13.496</td>
+<td align="right">0.000</td>
+<td align="right">0.000</td>
+<td align="right">0.134</td>
+<td align="right">0.023</td>
+</tr>
+<tr class="even">
+<td align="left">bmi</td>
+<td align="right">0.150</td>
+<td align="right">1.161</td>
+<td align="right">0.842</td>
+<td align="right">1.601</td>
+<td align="right">0.363</td>
+</tr>
+<tr class="odd">
+<td align="left">age</td>
+<td align="right">-0.054</td>
+<td align="right">0.947</td>
+<td align="right">0.856</td>
+<td align="right">1.049</td>
+<td align="right">0.301</td>
+</tr>
+<tr class="even">
+<td align="left">glucose</td>
+<td align="right">0.230</td>
+<td align="right">1.258</td>
+<td align="right">1.169</td>
+<td align="right">1.354</td>
+<td align="right">0.000</td>
+</tr>
+</tbody>
+</table>
+<p>The beta estimate associated with a 1-unit change in age is -0.054.
+The OR is 0.947. The 95% CI is (0.856, 1.049).</p>
 </div>
 
 
